# LI.FO

./: README.md
LIFOProj/: Automata.cpp  Automata.h  BruteForceAlgo.h  CMakeLists.txt  Grammar.h  GrammarII.cpp  GrammarII.h  InitialMinimizationAlgorithm.h  InitialSource.cpp  LIFOProj.sln  LIFOProj.vcxproj  LIFOProj.vcxproj.filters  Parser.h  Regex.cpp  Regex.h  Source.cpp  SymbolAutomaton.cpp  SymbolAutomaton.h  Utils.h  compile_dot.txt  reguli.txt
